Merge commit 'b2d0157612f8ac10d99119fd38c137cd4d80cf39' into HEAD
Conflicts:
	pom.xml
	presto-main/src/main/java/com/facebook/presto/server/StatementResource.java
	presto-server/pom.xml